--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
     "@types/node": "17.0.5",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "i18next": "^21.6.4",
+    "i18next-browser-languagedetector": "^6.1.2",
+    "i18next-http-backend": "^1.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.15.2",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
@@ -53,8 +57,12 @@
   "devDependencies": {
     "concurrently": "^6.5.1",
     "cross-env": "^7.0.3",
+    "devtron": "^1.4.0",
     "electron": "^16.0.5",
     "electron-builder": "^22.14.5",
+    "electron-devtools-installer": "^3.2.0",
+    "electron-is-dev": "^2.0.0",
+    "electron-squirrel-startup": "^1.0.0",
     "electronmon": "^2.0.2",
     "wait-for-localhost-cli": "^3.0.0",
     "wait-on": "^6.0.0"
