--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "@types/node": "17.0.5",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "graphology": "^0.23.2",
+    "graphology-layout": "^0.5.0",
+    "graphology-layout-forceatlas2": "^0.8.1",
+    "graphology-types": "^0.23.0",
     "i18next": "^21.6.4",
     "i18next-browser-languagedetector": "^6.1.2",
     "i18next-http-backend": "^1.3.1",
@@ -26,6 +30,8 @@
     "react-dom": "^17.0.2",
     "react-i18next": "^11.15.2",
     "react-scripts": "5.0.0",
+    "react-sigma-v2": "^1.3.0",
+    "sigma": "^2.1.3",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
   },
