--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "17.0.5",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "csv-parse": "^5.0.4",
     "graphology": "^0.23.2",
     "graphology-layout": "^0.5.0",
     "graphology-layout-forceatlas2": "^0.8.1",
@@ -26,6 +27,8 @@
     "i18next": "^21.6.4",
     "i18next-browser-languagedetector": "^6.1.2",
     "i18next-http-backend": "^1.3.1",
+    "lodash": "^4.17.21",
+    "neo4j-driver": "^4.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.15.2",
@@ -33,6 +36,7 @@
     "react-sigma-v2": "^1.3.0",
     "sigma": "^2.1.3",
     "typescript": "^4.5.4",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
@@ -70,6 +74,10 @@
     "electron-is-dev": "^2.0.0",
     "electron-squirrel-startup": "^1.0.0",
     "electronmon": "^2.0.2",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "enzyme-to-json": "^3.6.2",
+    "neo-forgery": "^2.0.0",
     "wait-for-localhost-cli": "^3.0.0",
     "wait-on": "^6.0.0"
   },
