--- a/package.json
+++ b/package.json
@@ -65,6 +65,10 @@
     ]
   },
   "devDependencies": {
+    "@types/enzyme": "^3.10.10",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@types/lodash": "^4.14.178",
+    "@types/uuid": "^8.3.3",
     "concurrently": "^6.5.1",
     "cross-env": "^7.0.3",
     "devtron": "^1.4.0",
