--- a/package.json
+++ b/package.json
@@ -19,31 +19,43 @@
     "@types/node": "17.0.5",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "assert": "^2.0.0",
+    "crypto-browserify": "^3.12.0",
     "csv-parse": "^5.0.4",
+    "fs": "^0.0.1-security",
     "graphology": "^0.23.2",
     "graphology-layout": "^0.5.0",
     "graphology-layout-forceatlas2": "^0.8.1",
     "graphology-types": "^0.23.0",
+    "https-browserify": "^1.0.0",
     "i18next": "^21.6.4",
     "i18next-browser-languagedetector": "^6.1.2",
     "i18next-http-backend": "^1.3.1",
     "lodash": "^4.17.21",
     "neo4j-driver": "^4.4.1",
+    "notistack": "^2.0.3",
+    "os": "^0.1.2",
+    "os-browserify": "^0.3.0",
     "react": "^17.0.2",
+    "react-app-rewired": "^2.1.11",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.15.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-sigma-v2": "^1.3.0",
+    "react-use": "^17.3.2",
     "sigma": "^2.1.3",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "typescript": "^4.5.4",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject",
     "electron": "electronmon .",
     "electron:start": "concurrently -k \"cross-env BROWSER=none yarn start\" \"yarn electron\"",
     "electron:package:mac": "yarn build && electron-builder -m -c.extraMetadata.main=build/electron.js",
