--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "sigma": "^2.1.3",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
+    "stylis": "^4.0.13",
+    "stylis-plugin-rtl": "^2.1.1",
     "typescript": "^4.5.4",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.2"
