--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "stylis-plugin-rtl": "^2.1.1",
     "typescript": "^4.5.4",
     "uuid": "^8.3.2",
-    "web-vitals": "^2.1.2"
+    "web-vitals": "^2.1.2",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "cross-env BROWSER=none react-app-rewired start",
