--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "i18next-browser-languagedetector": "^6.1.2",
     "i18next-http-backend": "^1.3.1",
     "lodash": "^4.17.21",
+    "mobx": "^6.3.13",
+    "mobx-react-lite": "^3.2.3",
     "neo4j-driver": "^4.4.1",
     "notistack": "^2.0.3",
     "os": "^0.1.2",
