--- a/package.json
+++ b/package.json
@@ -70,6 +70,9 @@
     "@electron-forge/maker-squirrel": "^6.0.0-beta.63",
     "@electron-forge/maker-zip": "^6.0.0-beta.63",
     "@electron-forge/plugin-webpack": "6.0.0-beta.63",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
     "@types/enzyme": "^3.10.10",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^27.4.0",
@@ -90,6 +93,7 @@
     "eslint": "^8.0.1",
     "eslint-plugin-import": "^2.25.0",
     "fork-ts-checker-webpack-plugin": "^6.0.1",
+    "jest": "^27.4.7",
     "neo-forgery": "^2.0.0",
     "node-loader": "^2.0.0",
     "stream-browserify": "^3.0.0",
@@ -109,9 +113,6 @@
     "@mui/styles": "^5.3.0",
     "@reecelucas/react-use-hotkeys": "^1.3.1",
     "@svgr/webpack": "^6.2.1",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
     "electron-is-dev": "^2.0.0",
     "electron-squirrel-startup": "^1.0.0",
     "graphology": "^0.23.2",
