--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "license": "MIT",
   "config": {
     "forge": {
-      "packagerConfig": {},
+      "packagerConfig": {
+        "executableName": "relationsjs"
+      },
       "makers": [
         {
           "name": "@electron-forge/maker-squirrel",
