--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -109,13 +109,15 @@ jobs:
         uses: actions/download-artifact@v2.0.10
         with:
           name: zipArtifact
+      - name: List artifacts
+        run: ls -R
       - name: Collecting artifacts
         id: collecting
         run: |
-          echo "::set-output name=packedFileNameEXE::$(ls make/squirrel.windows/x64/relationsjs*.exe)"
-          echo "::set-output name=packedFileNameDEB::$(ls make/relationsjs*.deb)"
-          echo "::set-output name=packedFileNameRPM::$(ls make/relationsjs*.rpm)"
-          echo "::set-output name=packedFileNameZIP::$(ls make/relationsjs*.zip)"
+          echo "::set-output name=packedFileNameEXE::$(ls make/squirrel.windows/x64/RelationsJS*.exe)"
+          echo "::set-output name=packedFileNameDEB::$(ls make/RelationsJS*.deb)"
+          echo "::set-output name=packedFileNameRPM::$(ls make/RelationsJS*.rpm)"
+          echo "::set-output name=packedFileNameZIP::$(ls make/RelationsJS*.zip)"
       - name: Create pre-release
         uses: softprops/action-gh-release@v1
         with:
