--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "relationsjs",
   "productName": "RelationsJS",
   "version": "0.0.1",
-  "description": "My Electron application description",
+  "description": "A relations creating and manipulating UI",
   "main": ".webpack/main",
   "scripts": {
     "start": "electron-forge start",
@@ -85,6 +85,7 @@
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "@vercel/webpack-asset-relocator-loader": "1.7.0",
+    "babel-jest": "^27.4.6",
     "css-loader": "^6.0.0",
     "devtron": "^1.4.0",
     "electron": "16.0.8",
@@ -96,6 +97,7 @@
     "eslint-plugin-import": "^2.25.0",
     "fork-ts-checker-webpack-plugin": "^6.0.1",
     "jest": "^27.4.7",
+    "jest-transform-css": "^3.0.0",
     "neo-forgery": "^2.0.0",
     "node-loader": "^2.0.0",
     "stream-browserify": "^3.0.0",
@@ -107,6 +109,7 @@
     "typescript": "~4.5.4"
   },
   "dependencies": {
+    "@babel/preset-react": "^7.16.7",
     "@electron/remote": "^2.0.4",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
@@ -115,12 +118,14 @@
     "@mui/styles": "^5.3.0",
     "@reecelucas/react-use-hotkeys": "^1.3.1",
     "@svgr/webpack": "^6.2.1",
+    "crypto-browserify": "^3.12.0",
     "electron-is-dev": "^2.0.0",
     "electron-squirrel-startup": "^1.0.0",
     "graphology": "^0.23.2",
     "graphology-layout": "^0.5.0",
     "graphology-layout-forceatlas2": "^0.8.1",
     "graphology-types": "^0.23.0",
+    "https-browserify": "^1.0.0",
     "i18next": "^21.6.10",
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-http-backend": "^1.3.2",
@@ -142,11 +147,7 @@
     "sigma": "^2.2.0",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
+    "ts-jest": "^27.1.3",
     "web-vitals": "^2.1.4"
-  },
-  "jest": {
-    "snapshotSerializers": [
-      "enzyme-to-json/serializer"
-    ]
   }
 }
